# gretel-test

./: .gitignore  README.md  pyproject.toml
src/gretel/: __main__.py  config.py
