[project]
name = "gretel"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Matt White", email = "mail@matt-w.net" }
]
dependencies = [
    "gretel-client>=0.15.14",
    "pydantic[dotenv]==1.10.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
